--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </li></ul>
             <button type="button">Browse All Product</button>
         </section>
-        <!-- Здесь я начинаю полностью делать сам, многое будет неправильно, к сожалению...Не успеваю. в выходные буду занят-->
+        <!-- Секция самостоятельной Lesson-2-->
         <section>
         <div class="widget">
                 <div class="container widget__container">
@@ -185,16 +185,30 @@
         </section>
     </main>
     <footer>
-        img-woman
-        <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
-        <h2>subscribe for our newletter and promotion</h2>
-        <p>© 2021 Brand All Rights Reserved.</p>
-        <ul>
-            <li><a href="#">facebook-img</a></li>
-            <li><a href="#">facebook-img</a></li>
-            <li><a href="#">facebook-img</a></li>
-            <li><a href="#">facebook-img</a></li>
+    <div>
+        <div class="foot__fetish">
+        <div>
+        <img src="./img/Foot-face.png" alt="none">
+        </div><div>
+        <h2>SUBSCRIBE<br> for our newletter and promotion</h2>
+            <form action="#">
+                <div> 
+                    <label for="email"></label>
+                    <input id="email" type="email" required>
+                    <button type="submit">Subscribe</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="foot__down">
+        <p class="foot__text"> © 2021 Brand All Rights Reserved.</p>
+        <ul class="foot__info">
+            <li class="foot__li"><a href="#"><img src="./img/faceb.svg" alt="facebook" width="10" heigh="7"></a></li>
+            <li class="foot__li"><a href="#"><img src="./img/inst.svg" alt="instagramm" width="13" heigh="13"></a></li>
+            <li class="foot__li"><a href="#"><img src="./img/pin.svg" alt="pint" width="15" heigh="15"></a></li>
+            <li class="foot__li"><a href="#"><img src="./img/twit.svg" alt="twitter" width="15" heigh="15"></a></li>
         </ul>
+    </div>
     </footer>
 </body>
 
