--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <button type="button" class="header__button">
                     <img src="./img/burger.svg" alt="burger" width="32" height="23">
                 </button>
-                <a class="header__link" href="#"><img src="./img/contact.svg" alt="person" width="32" height="23"></a>
+                <a class="header__link" href="./registration.html"><img src="./img/contact.svg" alt="person" width="32" height="23"></a>
                 <a href="#"><img src="./img/basket.svg" alt="cart" width="32" height="23"></a>
             </div>
         </div>
