--- a/registration.html
+++ b/registration.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400&display=swap"
         rel="stylesheet">
     <title>Shop</title>
+    
 </head>
 
 <body>
@@ -83,9 +84,9 @@
                 </div>
                 <div>
         <input class="radio" type="radio" name="browser" value="m" id="m"> 
-        <label class="radio-label" for="m">Mail</label>
+        <label class="radio-label" for="male">Mail</label>
         <input class="radio" type="radio" name="browser" value="f" id="f">
-        <label class="radio-label" for="f">Female</label>
+        <label class="radio-label" for="female">Female</label>
                 </div>
                 <div> 
                 <legend>Login details</legend>
@@ -111,16 +112,11 @@
 Get in on the loyalty program where you can earn points and unlock serious perks. Starting with these as soon as you join:
 </p>
 <ul>
-<li>15% off welcome offer
-</li>
-<li>Free shipping, returns and exchanges on all orders
-
-</li>
-<li>$10 off a purchase on your birthday
-
-</li>
-<li>Early access to products</li>
-<li>Exclusive offers & rewards</li>
+<li class="loyalty_item">15% off welcome offer</li>
+<li class="loyalty_item">shipping, returns and exchanges on all orders</li>
+<li class="loyalty_item">$10 off a purchase on your birthday</li>
+<li class="loyalty_item">Early access to products</li>
+<li class="loyalty_item">Exclusive offers & rewards</li>
 </ul>
         </div>
     </section>
