--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                         <button type="button" class="product__button">Add to Cart</button>
                     </div>
                 </li></ul>
-            <button type="button">Browse All Product</button>
+            <button type="button" class="products__button">Browse All Product</button>
         </section>
         <!-- Секция самостоятельной Lesson-2-->
         <section>
@@ -184,7 +184,7 @@
         </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
     <div>
         <div class="foot__fetish">
         <div>
@@ -194,8 +194,8 @@
             <form action="#">
                 <div> 
                     <label for="email"></label>
-                    <input id="email" type="email" required>
-                    <button type="submit">Subscribe</button>
+                    <input class="subscribe__send" id="email" type="email" required>
+                    <button type="submit" class="subscribe__button">Subscribe</button>
                 </div>
             </form>
         </div>
