--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="container header__container">
             <div>
-                <img class="header__logo" src="./img/logo.svg" alt="logo" width="44" height="38">
+                <a class="header__link" href="./index.html"><img src="./img/logo.svg" alt="person" width="42" height="43"></a>
                 <img src="./img/loupe.svg" alt="loupe" width="26" height="28">
             </div>
             <div>
@@ -66,7 +66,7 @@
             <img class="brand__img" src="./img/man.jpg" alt="man" width="800" height="765">
             <div class="brand__title-container">
                 <h1 class="brand__title">the brand <span class="brand__sub-title">of luxerious <span
-                            class="brand__pink-sub-title">fashion</span><span></h1>
+                            class="brand__pink-sub-title">fashion</span></h1>
             </div>
         </section>
         <section class="promotions container">
@@ -91,8 +91,10 @@
             </ul>
         </section>
         <section class="products container">
+            <div class="products__description">
             <h2 class="products__title">Fetured Items</h2>
             <p class="products__text">Shop for items based on what we featured in this week</p>
+            </div>
             <ul class="products__list">
                 <li class="products__item product">
                     <img class="product__img" src="./img/goods-man.jpg" alt="man" width="360" height="420">
