--- a/registration.html
+++ b/registration.html
@@ -18,14 +18,14 @@
     <header class="header">
         <div class="container header__container">
             <div>
-                <img class="header__logo" src="./img/logo.svg" alt="logo" width="44" height="38">
+                <a class="header__link" href="./index.html"><img src="./img/logo.svg" alt="person" width="42" height="43"></a>
                 <img src="./img/loupe.svg" alt="loupe" width="26" height="28">
             </div>
             <div>
                 <button type="button" class="header__button">
                     <img src="./img/burger.svg" alt="burger" width="32" height="23">
                 </button>
-                <a class="header__link" href="#"><img src="./img/contact.svg" alt="person" width="32" height="23"></a>
+                <a class="header__link" href="./registration.html"><img src="./img/contact.svg" alt="person" width="32" height="23"></a>
                 <a href="#"><img src="./img/basket.svg" alt="cart" width="32" height="23"></a>
             </div>
         </div>
@@ -106,12 +106,12 @@
             </fieldset>
             </form>
         
-        <div class="reg__before">
-            <h2>LOYALTY HAS ITS PERKS</h2>
+<div class="reg__before">
+<h2>LOYALTY HAS ITS PERKS</h2>
 <p>
 Get in on the loyalty program where you can earn points and unlock serious perks. Starting with these as soon as you join:
 </p>
-<ul>
+<ul class="loyalty">
 <li class="loyalty__item">15% off welcome offer</li>
 <li class="loyalty__item">shipping, returns and exchanges on all orders</li>
 <li class="loyalty__item">$10 off a purchase on your birthday</li>
