--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400&display=swap"
-        rel="stylesheet">
+    rel="stylesheet">
     <title>Shop</title>
 </head>
 
@@ -167,7 +167,6 @@
                 </li></ul>
             <button type="button" class="products__button">Browse All Product</button>
         </section>
-        <!-- Секция самостоятельной Lesson-2-->
         <section>
         <div class="widget">
                 <div class="container widget__container">
@@ -183,7 +182,7 @@
                         <h3>Quality assurance</h3>
                         <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p>
                     </div>
-        </div>
+        </div></div>
         </section>
     </main>
     <footer class="footer">
@@ -201,7 +200,7 @@
                 </div>
             </form>
         </div>
-    </div>
+    </div></div>
     <div class="foot__down">
         <p class="foot__text"> © 2021 Brand All Rights Reserved.</p>
         <ul class="foot__info">
@@ -213,5 +212,4 @@
     </div>
     </footer>
 </body>
-
 </html>
